Yeni metod əlavə edildi